# mir-tg-bot-web

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-local  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
src/: main.py
src/config/: db_settings.py  settings.py  tg_settings.py
src/handlers/: start.py
src/infrastructure/: db.py
src/presentation/api/handlers/: start.py
src/presentation/handlers/: handlers.py
src/presentation/keyboards/: inline_keyboard.py
