[project]
name = "mir-tg-bot-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.22.0",
    "pydantic-settings==2.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    "tests",
    "Makefile"
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "UP"]
ignore = ["E701"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
